dts/testData/inspections/requiredProperty/DeleteNode.dts
/include/ "Declaration.dtsi"

&lable {
    phy-handle = "";
};

/ {
    /delete-node/ node;
};

<error descr="Missing required properties: \"compatible\", \"phy-handle\"">&lable</error> {};